[gd_scene load_steps=7 format=3 uid="uid://18q6ykut8s83"]

[ext_resource type="Script" uid="uid://dpw4wuie057gj" path="res://magic_node.gd" id="1_tjibe"]
[ext_resource type="Texture2D" uid="uid://benmq6067ehxx" path="res://placeholder_assets/circle.png" id="1_vs4el"]
[ext_resource type="PackedScene" uid="uid://2gjrer57ae4j" path="res://components/magic_line_connectable_component.tscn" id="3_pw1qt"]
[ext_resource type="PackedScene" uid="uid://yn0ar2af2542" path="res://components/enchantment_cursor_detection_component.tscn" id="4_kmmj3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kmmj3"]
radius = 31.0161

[sub_resource type="CircleShape2D" id="CircleShape2D_8ufat"]

[node name="MagicNode" type="Node2D"]
script = ExtResource("1_tjibe")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_vs4el")

[node name="MagicLineConnectableComponent" parent="." instance=ExtResource("3_pw1qt")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagicLineConnectableComponent"]
shape = SubResource("CircleShape2D_kmmj3")
debug_color = Color(0.275169, 0.632041, 0.00243753, 0.42)

[node name="EnchantmentCursorDetectionComponent" parent="." instance=ExtResource("4_kmmj3")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnchantmentCursorDetectionComponent"]
shape = SubResource("CircleShape2D_8ufat")
debug_color = Color(0.6171, 0.535833, 1.92523e-07, 0.42)

[connection signal="connectable_line_detected" from="MagicLineConnectableComponent" to="." method="_on_magic_line_connectable_component_connectable_line_detected"]
[connection signal="unconnectable_line_detected" from="MagicLineConnectableComponent" to="." method="_on_magic_line_connectable_component_unconnectable_line_detected"]
